# carya-eagle-eye

./: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20241222_add_is_ai_deal.py  20241222_dedup_optimization.py  20241222_feedback_table.py  20241222_portfolio_snapshots.py  20241222_token_usage.py  20241222_tracker_items.py  20241224_add_verification_tables.py  20241225_add_scan_jobs.py  20241225_lead_evidence_weak.py  20260102_company_name_unique.py  20260102_tracker_columns.py  20260103_amount_review_fields.py  20260103_stealth_signals.py  20260107_add_amount_source.py  20260113_add_dedup_key.py  20260116_add_amount_dedup_key.py  20260121_content_hashes.py  20260122_regenerate_dedup_keys.py  20260126_composite_indexes.py  (+7 more)
frontend/: .env.development  .env.production  .gitignore  .railwayignore  Dockerfile  index.html  package-lock.json  package.json  railway.toml  tailwind.config.js  vite.config.ts
scripts/: crunchbase_bot.py  process_crunchbase_csv.py  quickstart.sh  run_amount_dedup_migration.py  setup_crunchbase_cron.sh
src/: main.py
tests/: conftest.py  test_amount_validation.py  test_batch_content_hash.py  test_bug_fixes.py  test_ceo_extraction_comprehensive.py  test_ceo_name_extraction.py  test_company_validation.py  test_confidence_scoring.py  test_dedup_key.py  test_deduplication_all_tiers.py  test_deduplication_tier0.py  test_delaware.py  test_extractor.py  test_extractor_functions.py  test_helpers.py  test_validation_functions.py
(+110 files in other folders)
